fix(api): correct goal completion, tokenisation and command branch ordering